--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,11 +2,7 @@
    
 name: Python CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: push
 
 jobs:
   build:
