--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8,<4.0"
+python = "^3.10"
 prompt = "^0.4.1"
-flake8 = "^3.8.3"
+flake8 = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 
